--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script defer src="main.js"></script>
+    <script defer src="./renderer.js"></script>
 </head>
 <body>
     <div class="container">
