--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
             <div>
                 <h1>Data</h1>
 
-
+                <textarea id="data" rows="20"></textarea>
             </div>
+            <br>
+
+            <button class="btn">Send</button>
         </form>
     </div>
 </body>
