Fix bug when set headers

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <div>
                 <h1>URL</h1>
 
-                <input type="text" id="url" placeholder="http://localhost:3000/test" value="">
+                <input type="text" id="url" placeholder="http://localhost:3000/test" value="http://localhost:3000/test">
             </div>
 
             <div>
                 <h1>Method</h1>
 
                 <label class="radio">
-                    <input type="radio" name="method" value="GET" checked>
+                    <input type="radio" name="method" value="GET">
                     <span>GET</span>
                 </label>
 
                 <label class="radio">
-                    <input type="radio" name="method" value="POST">
+                    <input type="radio" name="method" value="POST" checked>
                     <span>POST</span>
                 </label>
 
